<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_casas"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_carne"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_matanzas"
            android:icon="@drawable/ic_cerdo"
            android:title="@string/menu_matanzas" />
        <item
            android:id="@+id/nav_procesos"
            android:icon="@drawable/ic_carnicero"
            android:title="@string/menu_procesos" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_archivo"
            android:title="@string/menu_historial" />
        <item
            android:id="@+id/nav_camaras"
            android:icon="@drawable/ic_refrigerador"
            android:title="@string/menu_camaras" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/ic_inventario"
            android:title="@string/menu_inventario" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contactanos"
                android:icon="@drawable/ic_servicio_al_cliente"
                android:title="@string/menu_contacto" />
            <item
                android:id="@+id/nav_cerrarsesion"
                android:icon="@drawable/ic_puerta"
                android:title="@string/menu_cerrarsesion" />
        </menu>
    </item>
</menu>
