<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jccsisc.controlbsc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>


    <fragment
        android:id="@+id/nav_productos"
        android:name="com.jccsisc.controlbsc.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_matanzas"
        android:name="com.jccsisc.controlbsc.ui.matanzas.MatanzasFragment"
        android:label="@string/menu_matanzas"
        tools:layout="@layout/fragment_matanzas" />

    <fragment
        android:id="@+id/nav_procesos"
        android:name="com.jccsisc.controlbsc.ui.procesos.ProcesosFragment"
        android:label="@string/menu_procesos"
        tools:layout="@layout/fragment_procesos" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.jccsisc.controlbsc.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.jccsisc.controlbsc.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.jccsisc.controlbsc.ui.tickets.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/nav_camaras"
        android:name="com.jccsisc.controlbsc.ui.camaras.CamarasFragment"
        android:label="@string/menu_camaras"
        tools:layout="@layout/fragment_camaras" />

    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.jccsisc.controlbsc.ui.inventario.InventarioFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario" />

    <fragment
        android:id="@+id/nav_proveedores"
        android:name="com.jccsisc.controlbsc.ui.proveedores.ProveedoresFragment"
        android:label="@string/menu_proveedores"
        tools:layout="@layout/fragment_proveedores" />

    <fragment
        android:id="@+id/nav_contactanos"
        android:name="com.jccsisc.controlbsc.ui.contactanos.ContactanosFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_contactanos" />

    <fragment
        android:id="@+id/nav_contenedor_fragment"
        android:name="com.jccsisc.controlbsc.ui.ContenedorFragment"
        android:label="Contenedor fragment"
        tools:layout="@layout/fragment_contenedor" />


</navigation>