<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_20">

    <ImageView
        android:layout_marginTop="@dimen/marginTop_imgLogin_60"
        android:layout_width="@dimen/width_logoLogin_150"
        android:layout_height="@dimen/width_logoLogin_150"
        android:padding="@dimen/padding_10"
        android:src="@drawable/descarga"
        android:contentDescription="@string/img_description"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_marginTop="@dimen/margin_Top_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/size_20"
            android:text="silva.jccs18@gmail.com"
            android:drawableEnd="@drawable/ic_usuario"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_marginTop="@dimen/marginTop_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/holo_red_dark"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:text="aaaaaa"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/size_20"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="@dimen/marginTop_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/borde_btn_sumar"
        android:textColor="@android:color/white"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btnForget"
        android:layout_marginTop="@dimen/marginTop_20"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_btnSign_In"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/btn_forget"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/size_15"
        android:textColor="@color/colorSecondaryText"
        android:onClick="onClick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop_20"
        android:gravity="center">
        <View
            android:layout_width="@dimen/width_100"
            android:layout_height="@dimen/height_1"
            android:background="@color/colorSecondaryText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/size_15"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_10"/>
        <View
            android:layout_width="@dimen/width_100"
            android:layout_height="@dimen/height_1"
            android:background="@color/colorSecondaryText"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_marginTop="@dimen/marginTop_10"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_btnSign_In"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/btn_Sign_In"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/size_15"
        android:textColor="@color/colorSecondaryText"
        android:onClick="onClick"/>

</LinearLayout>