<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogs.ForgetPasswordFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_20"
            android:text="@string/restablecer"
            android:textAlignment="center"
            android:layout_weight="0.5"/>

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_salida"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_weight="0.2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/colorPrimaryLight"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota_dialog_forget"
        android:layout_margin="@dimen/margin_10"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_marginTop="@dimen/margin_Top_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/size_15"
            android:drawableEnd="@drawable/ic_usuario"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSend"
        android:layout_marginTop="@dimen/margin_Top_40"
        android:layout_width="@dimen/width_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_enviar"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/borde_btn_sumar"
        android:textColor="@android:color/white"/>
    <com.agrawalsuneet.dotsloader.loaders.TashieLoader
        android:id="@+id/tashieLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:tashieloader_animDelay="200"
        app:tashieloader_animDur="1000"
        app:tashieloader_dotsColor="@color/colorPrimary"
        app:tashieloader_dotsDist="5dp"
        app:tashieloader_dotsRadius="12dp"
        app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
        app:tashieloader_noOfDots="6"
        android:layout_gravity="center"/>

</LinearLayout>