<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dialogs.ModifyCajaFragment"
    android:id="@+id/fragmentModifyCaja"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_15"
            android:text="@string/modify_caja"
            android:fontFamily="@font/roboto_regular"
            android:textAlignment="center"
            android:layout_weight="0.5"/>

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cerrar"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_weight="0.2"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@color/colorPrimaryLight"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/nota_dialog_modify_caja"
        android:layout_margin="@dimen/margin_10"/>

    <TextView
        android:id="@+id/txtModificarCaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="22.5"
        android:fontFamily="@font/roboto_bold"
        android:layout_margin="@dimen/margin_10"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPesoCaja"
        android:layout_marginTop="@dimen/margin_Top_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePesoCaja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10"
            android:hint="@string/hint_peso_caja"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/size_15"
            android:drawableEnd="@drawable/ic_edit_caja" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="@dimen/width_100"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminar"
            android:layout_margin="@dimen/margin_10"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/borde_btn_eliminar"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnModifyCaja"
            android:layout_width="@dimen/width_100"
            android:layout_height="wrap_content"
            android:text="@string/btn_modificar"
            android:layout_margin="@dimen/margin_10"
            android:fontFamily="@font/roboto_regular"
            android:background="@drawable/borde_btn_sumar"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <com.agrawalsuneet.dotsloader.loaders.TashieLoader
        android:id="@+id/tashieLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="20dp"
        app:tashieloader_animDelay="200"
        app:tashieloader_animDur="1000"
        app:tashieloader_dotsColor="@color/colorPrimary"
        app:tashieloader_dotsDist="5dp"
        app:tashieloader_dotsRadius="12dp"
        app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
        app:tashieloader_noOfDots="6"
        android:layout_gravity="center"/>

</LinearLayout>