<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="91dp"
        android:autoSizeMaxTextSize="@dimen/size_25"
        android:autoSizeMinTextSize="@dimen/size_8"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/entradas_salidas"
        android:textSize="@dimen/size_25"
        app:layout_constraintBottom_toTopOf="@+id/cardViewEntrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEntrada"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_170"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="26dp"
        android:clickable="true"
        android:elevation="6dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/corner_radius_10"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/entradas"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_45" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSalida"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_170"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:elevation="5dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/holo_red_dark"
        app:cardCornerRadius="@dimen/corner_radius_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/salidas"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_45"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-9dp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>